--- a/main.html
+++ b/main.html
@@ -4,10 +4,53 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.hero{
+			display:flex;
+			justify-content:space-around;
+			align-items:right;
+			gap:20px;
+		}
+		.image{
+			width:700px;
+			height:500px;
+			object-fit:cover;
+			
+		}
+		.con3{
+			padding:30px;
+			margin:20px;
+		}
+		.btn{
+			padding:10px;
+			background-color: orangered;
+			color:white;
+			border:none;
+			border-radius:5px;
+			
+			
+		}
+		p{
+			margin:15px;
+			align-items:center;
+			
+		}
+		
+	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="hero">
+		<div class="imageSection">
+			<img class="image" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
+		</div>
+		<div class="con3">
+			<h1>Welcome to Pintrest clone</h1>
+			<p>Discover new inspiration and save your favourite ideas</p>
+			<button class="btn" type="button" name="button">Explore now</button>
+		</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
